Implemented API endpoint
